--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp>=3.12.15",
     "asyncio>=4.0.0",
+    "azure-ai-translation-text>=1.0.0",
     "azure-search>=1.0.0b2",
     "azure-search-documents>=11.5.3",
+    "openai>=1.100.2",
+    "playwright>=1.54.0",
     "python-dotenv>=1.1.1",
-    "semantic-kernel>=1.35.3",
 ]
