--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.12.15",
     "asyncio>=4.0.0",
+    "azure-ai-projects>=1.0.0",
     "azure-ai-translation-text>=1.0.0",
+    "azure-identity>=1.24.0",
     "azure-search>=1.0.0b2",
     "azure-search-documents>=11.5.3",
     "openai>=1.100.2",
