WIP: Infrastructure documentation scaffold for Medicaid RAG + AI Agent solution
🎯 GOALS ACHIEVED:
- Transform generic infrastructure template to AI-specific solution
- Create comprehensive deployment automation framework
- Organize project structure for infrastructure-first development

📋 DOCUMENTATION UPDATES:
- README.md: Complete rewrite for infrastructure-first workflow
- CONTEXT.md: Updated scope for Medicaid RAG + AI Agent solution
- BEST_PRACTICES.md: Added AI service-specific guidance
- All docs enhanced with Azure AI services integration

🆕 NEW FILES CREATED:
- TODO.md: Future opportunities tracking
- .env.template: Comprehensive environment variables
- docs/POST_DEPLOYMENT_CONFIG.md: Automation procedures
- docs/LOCAL_DEVELOPMENT.md: Development workflow
- scripts/: PowerShell automation framework (placeholders)
- LICENSE: MIT license

🏗️ PROJECT ORGANIZATION:
- src/: Moved Python applications (medicaid-rag.py, scraper.py, bing.py)
- .gitignore: Comprehensive patterns for Python/Azure development
- Updated all documentation paths to reflect new structure

🤖 AUTOMATION FRAMEWORK:
- scripts/post-deploy-setup.ps1: Main orchestration
- scripts/setup-search-index.ps1: AI Search configuration
- scripts/deploy-models.ps1: OpenAI model deployment
- scripts/populate-secrets.ps1: Key Vault management
- scripts/validate-deployment.ps1: Deployment validation

🎯 DEVELOPMENT WORKFLOW ESTABLISHED:
1. azd up → Deploy infrastructure
2. scripts/post-deploy-setup.ps1 → Configure services
3. uv run data/ingest-data.py → Populate search index
4. uv run src/*.py → Local development
5. azd down → Teardown

📊 AZURE SERVICES DOCUMENTED:
- Azure AI Search: Vector search for Medicaid documents
- Azure OpenAI: GPT-5-Chat + text-embedding models
- Azure AI Translator: Multi-language support
- Azure AI Foundry: AI agents with Bing search
- Azure Key Vault: Secure secrets management

🚧 NEXT STEPS:
- Create Bicep infrastructure templates
- Implement actual automation scripts
- Add enviro

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,86 @@
+# Environment Variables
 .env
+.env.local
+.env.*.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environments
+.venv/
+venv/
+ENV/
+env/
+.env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Azure
+.azure/
+.azd/
+
+# Logs
+*.log
+logs/
+
+# Dependencies
+node_modules/
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Output files
+*.txt
+!data/*.txt
+!docs/*.txt
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
